package co.edu.uniquindio.subasta.model;

public class Anuncio {
}
